# Vivre-le-bourget-Map-idee

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  app.py  cartes_des_idee.py  main.py  proposition_geoloc.csv  pyproject.toml  requirements.txt  settings.py
.streamlit/: config.toml
tests/: test_sample.py
