[project]
name = "vivre-le-bourget-map-idee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "pandas>=2.3.3",
    "pre-commit>=4.5.0",
    "streamlit>=1.52.0",
    "streamlit-folium>=0.25.3",
]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/#flake8-bandit-s
extend-select = ["S"]
# Use of assert detected
ignore = ["S101"]
